force-app/main/default/objects/TestJobId__c/TestJobId__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TestJobId</label>
</CustomObject>