force-app/main/default/objects/TestJobId__c/fields/Excluded_Classes__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Classes__c</fullName>
    <inlineHelpText>Enter classes to be excluded</inlineHelpText>
    <label>Excluded Classes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>