force-app/main/default/objects/TestJobId__c/fields/First_Execution__c.field-meta.xml
<CustomField>
    <fullName>First_Execution__c</fullName>
    <label>First Execution</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>