force-app/main/default/objects/TestJobId__c/fields/ProcessResult__c.field-meta.xml
<CustomField>
    <fullName>ProcessResult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ProcessResult</label>
    <type>Checkbox</type>
</CustomField>