force-app/main/default/objects/TestJobId__c/fields/userIds__c.field-meta.xml
<CustomField>
    <fullName>userIds__c</fullName>
    <label>userIds</label>
    <length>80</length>
    <type>Text</type>
</CustomField>